“岡田社長写真変更”

--- a/index.html
+++ b/index.html
@@ -1835,7 +1835,7 @@ body::before {
                 </ul>
             </div>
             <div class="ceo-image-right" data-aos="fade-left" data-aos-delay="300">
-                <img src="images/岡田社長.jpeg" alt="岡田代表取締役の顔写真" class="content-image" loading="lazy">
+                <img src="images/岡田社長2.jpeg" alt="岡田代表取締役の顔写真" class="content-image" loading="lazy">
             </div>
         </div>
     </section>
