Final attempt to fix video tag

--- a/index.html
+++ b/index.html
@@ -2100,8 +2100,9 @@ body::before {
         <p data-aos="fade-up" data-aos-delay="100">SPINTECHNOLOGYの活気ある職場環境や社員の様子をご紹介します。</p>
         <div class="video-container" data-aos="fade-up" data-aos-delay="200">
             <video controls playsinline autoplay muted loop preload="metadata" poster="images/2025.6総会movie_poster.jpg">
-                <source src="videos/2025.6総会movie.mp4" type="video/mp4"> 
-                </video>
+                <source src="videos/2025.6総会movie.mp4" type="video/mp4">
+                お使いのブラウザは動画の再生に対応していません。
+            </video>
         </div>
     </section>
 
