--- a/index-mark2.html
+++ b/index-mark2.html
@@ -1421,7 +1421,7 @@
                                         <div class="node engineering" data-aos="slide-up" data-aos-delay="100">
                                             <i class="fas fa-cogs department-icon"></i><br>
                                             エンジニアリング事業部
-                                            <div class="details">部長5名<br>マネージャー18名<br>エンジニア</div>
+                                            <div class="details">部長:5名<br>マネージャー:18名<br>エンジニア</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1599,20 +1599,39 @@
         <h2>7. 先輩エンジニアへインタビュー</h2>
         <div class="image-gallery">
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="100">
-                <h3 class="career-title">インフラエンジニア：J.I</h3>
-                <p>「未経験からこの会社に入社し、充実した研修と先輩方のサポートのおかげで、今ではAWSの設計・構築を担当しています。毎日が新しい学びの連続で、自分の成長を実感できる環境です。」</p>
+                <div class="engineer-photo">
+                    <img src="images/engineer_ji.jpg" alt="今井部長" loading="lazy">
+                </div>
+                <div class="engineer-text">
+                    <h3 class="career-title">インフラエンジニア：J・I</h3>
+                    <p>～依頼中～</p>
+                </div>
             </div>
-            <div class="gallery-item" data-aos="fade-up" data-aos-delay="100">
-                <h3 class="career-title">インフラエンジニア：K.N</h3>
-                <p>「未経験からこの会社に入社し、充実した研修と先輩方のサポートのおかげで、今ではAWSの設計・構築を担当しています。毎日が新しい学びの連続で、自分の成長を実感できる環境です。」</p>
+            <div class="gallery-item" data-aos="fade-up" data-aos-delay="100"> <div class="engineer-photo">
+                    <img src="images/engineer_kn.jpg" alt="西小野部長" loading="lazy">
+                </div>
+                <div class="engineer-text">
+                    <h3 class="career-title">インフラエンジニア：K・N</h3>
+                    <p>～依頼中～</p>
+                </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="200">
-                <h3 class="career-title">開発エンジニア：R.K</h3>
-                <p>「私はWebアプリケーション開発を担当しています。ここでは新しい技術に積極的に挑戦できる文化があり、最先端の技術を実務で活かす機会が豊富です。チームで協力し、大きなプロジェクトを成功させる喜びを感じています。」</p>
+                <div class="engineer-photo">
+                    <img src="images/engineer_rk.jpg" alt="木田部長" loading="lazy">
+                </div>
+                <div class="engineer-text">
+                    <h3 class="career-title">開発エンジニア：R・K</h3>
+                    <p>～依頼中～</p>
+                </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="300">
-                <h3 class="career-title">コンサルエンジニア：T.U</h3>
-                <p>「お客様のビジネス課題をITで解決するコンサルティング業務に魅力を感じています。技術力だけでなく、コミュニケーション能力や提案力も磨けるため、多角的に成長したい方には最適な環境だと思います。」</p>
+                <div class="engineer-photo">
+                    <img src="images/engineer_tu.jpg" alt="梅野部長" loading="lazy">
+                </div>
+                <div class="engineer-text">
+                    <h3 class="career-title">コンサルエンジニア：T・U</h3>
+                    <p>～依頼中～</p>
+                </div>
             </div>
         </div>
     </section>
@@ -1752,7 +1771,6 @@
             <li data-aos="fade-up" data-aos-delay="200">資格取得支援制度（受験料・研修費全額補助）</li>
             <li data-aos="fade-up" data-aos-delay="250">研修費無料のITスクール付き</li>
             <li data-aos="fade-up" data-aos-delay="300">社内SPIN大会やゲームスペースで気軽に交流。仕事後にリフレッシュできる文化</li>
-            <p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">経験から成長できる環境です！</p>
         </ol>
     </section>
 
@@ -1795,7 +1813,7 @@
             <li data-aos="fade-up" data-aos-delay="100">公式Instagram<br><a
                         href="https://www.instagram.com/spintec.official/?hl=ja"
                         target="_blank">https://www.instagram.com/spintec.official//</a></li>
-            <li data-aos="fade-up" data-aos-delay="100">26卒生の説明会はこちら<br><a
+            <li data-aos="fade-up" data-aos-delay="100">26卒の説明会はこちら<br><a
                         href="https://job.mynavi.jp/26/pc/corpinfo/displaySeminar/index?optNo=S1YStC&corpId=271969"
                         target="_blank">https://job.mynavi.jp/26/pc/corpinfo/displaySeminar/index?optNo=S1YStC&corpId=271969</a>
             </li>
@@ -1803,7 +1821,7 @@
         <h4 class="contact-call-to-action" data-aos="fade-up" data-aos-delay="150">ご質問があれば、お気軽にお問い合わせ・ご連絡ください。</h4>
         <div class="qr-code-container" data-aos="zoom-in" data-aos-delay="500">
             <img src="images/問い合わせQR2.jpeg" alt="お問い合わせ用QRコード" class="content-image" loading="lazy">
-            <p>スマートフォンでQRコードを読み取り、お問い合わせフォームへ進んでください</p>
+            <p>スマートフォンでQRコードを読み込んでください</p>
         </div>
     </section>
 
