--- a/index.html
+++ b/index.html
@@ -1159,16 +1159,16 @@
                 <a href="#"> <img src="images/logo.jpeg" alt="SPINTECHNOLOGY"> </a>
             </h1>
             <div class="p-header__right">
-                <div class="p-header__btn p-btn p-btn__session u-desktop">
-                    <a href="#contact"><span>お問い合わせはコチラ</span></a>
-                </div>
                 <div class="p-header__btn p-btn p-btn__recruit u-desktop">
                     <a href="#culture"><span>お役立ち情報</span></a>
+                </div>
+                <div class="p-header__btn p-btn p-btn__session u-desktop">
+                    <a href="#contact"><span>お問い合わせはコチラ</span></a>
                 </div>
                 <div class="p-header__btn p-btn p-btn__seminar u-desktop">
                     <a href="https://job.mynavi.jp/26/pc/corpinfo/displaySeminar/index?optNo=S1YStC&corpId=271969"
                         target="_blank">
-                        <span>26卒の説明会はコチラ</span>
+                        <span>26卒の方はこちら</span>
                     </a>
                 </div>
                 <button class="p-hamburger p-header__hamburger">
@@ -1191,12 +1191,6 @@
                         </div>
                     </div>
                     <div class="p-g-nav__item">
-                        <a href="https://job.mynavi.jp/26/pc/corpinfo/displaySeminar/index?optNo=S1YStC&corpId=271969" target="_blank">
-                            <p class="p-g-nav__sub-title">Information seminar</p>
-                            <h2 class="p-g-nav__title">26卒生の説明会</h2>
-                        </a>
-                    </div>
-                    <div class="p-g-nav__item">
                         <a href="#company-overview">
                             <p class="p-g-nav__sub-title">About</p>
                             <h2 class="p-g-nav__title">会社概要</h2>
@@ -1208,7 +1202,13 @@
                                 <p class="p-g-nav__sub-title">Tips</p>
                                 <h2 class="p-g-nav__title">お役立ち情報</h2>
                             </a>
-                        </div>
+                    </div>
+                         <div class="p-g-nav__item">
+                        <a href="https://job.mynavi.jp/26/pc/corpinfo/displaySeminar/index?optNo=S1YStC&corpId=271969" target="_blank">
+                            <p class="p-g-nav__sub-title">Information seminar</p>
+                            <h2 class="p-g-nav__title">26卒の説明会はこちら</h2>
+                        </a>
+                    </div>
                     </div>
                     </div>
                 </div>
@@ -1300,7 +1300,7 @@
                                         <div class="node engineering" data-aos="slide-up" data-aos-delay="100">
                                             <i class="fas fa-cogs department-icon"></i><br>
                                             エンジニアリング事業部
-                                            <div class="details">部長5名<br>エンジニア: 265名</div>
+                                            <div class="details">部長:5名<br>マネージャー:18名<br>エンジニア: 265名</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1344,7 +1344,7 @@
                                         <div class="node infra-dept-1" data-aos="slide-up" data-aos-delay="100">
                                             <i class="fas fa-server department-icon"></i><br>
                                             第一事業部
-                                            <div class="details">部長<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長<br>マネージャー: 4名</div>
                                         </div>
                                         <ul>
                                             <li>
@@ -1357,7 +1357,7 @@
                                         <div class="node infra-dept-2" data-aos="slide-up" data-aos-delay="150">
                                             <i class="fas fa-network-wired department-icon"></i><br>
                                             第二事業部
-                                            <div class="details">部長<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長<br>マネージャー: 4名</div>
                                         </div>
                                         <ul>
                                             <li>
@@ -1370,7 +1370,7 @@
                                         <div class="node dev-dept" data-aos="slide-up" data-aos-delay="200">
                                             <i class="fas fa-code department-icon"></i><br>
                                             第三事業部
-                                            <div class="details">部長<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長<br>マネージャー: 4名</div>
                                         </div>
                                         <ul>
                                             <li>
@@ -1383,7 +1383,7 @@
                                         <div class="node consult-dept" data-aos="slide-up" data-aos-delay="250">
                                             <i class="fas fa-lightbulb department-icon"></i><br>
                                             第四事業部
-                                            <div class="details">部長<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長<br>マネージャー: 4名</div>
                                         </div>
                                         <ul>
                                             <li>
@@ -1396,7 +1396,7 @@
                                         <div class="node data-science-dept" data-aos="slide-up" data-aos-delay="300">
                                             <i class="fas fa-chart-line department-icon"></i><br>
                                             第五事業部
-                                            <div class="details">部長<br>マネジメントメンバー: 2名</div>
+                                            <div class="details">部長<br>マネージャー: 2名</div>
                                         </div>
                                         <ul>
                                             <li>
@@ -1477,37 +1477,37 @@
         <div class="image-gallery">
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="100">
                 <div class="engineer-photo">
-                    <img src="images/engineer_ji.jpg" alt="インフラエンジニア J・I さんの写真" loading="lazy">
+                    <img src="images/engineer_ji.jpg" alt="今井部長" loading="lazy">
                 </div>
                 <div class="engineer-text">
                     <h3 class="career-title">インフラエンジニア：J・I</h3>
-                    <p>「未経験からこの会社に入社し、充実した研修と先輩方のサポートのおかげで、今ではAWSの設計・構築を担当しています。毎日が新しい学びの連続で、自分の成長を実感できる環境です。」</p>
+                    <p>～依頼中～</p>
                 </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="100"> <div class="engineer-photo">
-                    <img src="images/engineer_kn.jpg" alt="インフラエンジニア K・N さんの写真" loading="lazy">
+                    <img src="images/engineer_kn.jpg" alt="西小野部長" loading="lazy">
                 </div>
                 <div class="engineer-text">
                     <h3 class="career-title">インフラエンジニア：K・N</h3>
-                    <p>「未経験からこの会社に入社し、充実した研修と先輩方のサポートのおかげで、今ではAWSの設計・構築を担当しています。毎日が新しい学びの連続で、自分の成長を実感できる環境です。」</p>
+                    <p>～依頼中～</p>
                 </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="200">
                 <div class="engineer-photo">
-                    <img src="images/engineer_rk.jpg" alt="開発エンジニア R・K さんの写真" loading="lazy">
+                    <img src="images/engineer_rk.jpg" alt="木田部長" loading="lazy">
                 </div>
                 <div class="engineer-text">
                     <h3 class="career-title">開発エンジニア：R・K</h3>
-                    <p>「私はWebアプリケーション開発を担当しています。ここでは新しい技術に積極的に挑戦できる文化があり、最先端の技術を実務で活かす機会が豊富です。チームで協力し、大きなプロジェクトを成功させる喜びを感じています。」</p>
+                    <p>～依頼中～</p>
                 </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="300">
                 <div class="engineer-photo">
-                    <img src="images/engineer_tu.jpg" alt="コンサルエンジニア T・U さんの写真" loading="lazy">
+                    <img src="images/engineer_tu.jpg" alt="梅野部長" loading="lazy">
                 </div>
                 <div class="engineer-text">
                     <h3 class="career-title">コンサルエンジニア：T・U</h3>
-                    <p>「お客様のビジネス課題をITで解決するコンサルティング業務に魅力を感じています。技術力だけでなく、コミュニケーション能力や提案力も磨けるため、多角的に成長したい方には最適な環境だと思います。」</p>
+                    <p>～依頼中～</p>
                 </div>
             </div>
         </div>
@@ -1653,7 +1653,6 @@
             <li data-aos="fade-up" data-aos-delay="200">資格取得支援制度（受験料・研修費全額補助）</li>
             <li data-aos="fade-up" data-aos-delay="250">研修費無料のITスクール付き</li>
             <li data-aos="fade-up" data-aos-delay="300">社内SPIN大会やゲームスペースで気軽に交流。仕事後にリフレッシュできる文化</li>
-            <p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">経験から成長できる環境です！</p>
         </ol>
     </section>
 
@@ -1696,7 +1695,7 @@
             <li data-aos="fade-up" data-aos-delay="100">公式Instagram<br><a
                     href="https://www.instagram.com/spintec.official/?hl=ja"
                     target="_blank">https://www.instagram.com/spintec.official//</a></li>
-            <li data-aos="fade-up" data-aos-delay="100">26卒生の説明会はこちら<br><a
+            <li data-aos="fade-up" data-aos-delay="100">26卒の説明会はこちら<br><a
                     href="https://job.mynavi.jp/26/pc/corpinfo/displaySeminar/index?optNo=S1YStC&corpId=271969"
                     target="_blank">https://job.mynavi.jp/26/pc/corpinfo/displaySeminar/index?optNo=S1YStC&corpId=271969</a>
             </li>
@@ -1704,7 +1703,7 @@
         <h4 class="contact-call-to-action" data-aos="fade-up" data-aos-delay="150">ご質問があれば、お気軽にお問い合わせ・ご連絡ください。</h4>
         <div class="qr-code-container" data-aos="zoom-in" data-aos-delay="500">
             <img src="images/問い合わせQR2.jpeg" alt="お問い合わせ用QRコード" class="content-image" loading="lazy">
-            <p>スマートフォンでQRコードを読み取り、お問い合わせフォームへ進んでください</p>
+            <p>スマートフォンでQRコードを読み込んでください</p>
         </div>
     </section>
 
