--- a/index-mark3.html
+++ b/index-mark3.html
@@ -608,45 +608,40 @@
             <div class="node engineer-group">
                 <i class="fa fa-server department-icon"></i>
                 <div class="name">第一事業部</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">部長</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">マネージャー: 4名</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">エンジニア</div>
+                <div class="details">部長</div>
+                        <div class="details">マネージャー: 4名<br>エンジニア</div>
             </div>
         </div>
         <div class="node-wrapper">
             <div class="node engineer-group">
                 <i class="fa fa-code department-icon"></i>
                 <div class="name">第二事業部</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">部長</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">マネージャー: 4名</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">エンジニア</div>
+                <div class="details">部長</div>
+                        <div class="details">マネージャー: 4名<br>エンジニア</div>
             </div>
         </div>
         <div class="node-wrapper">
             <div class="node engineer-group">
                 <i class="fa fa-laptop-code department-icon"></i>
                 <div class="name">第三事業部</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">部長</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">マネージャー: 4名</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">エンジニア</div>
+                <div class="details">部長</div>
+                        <div class="details">マネージャー: 4名<br>エンジニア</div>
             </div>
         </div>
         <div class="node-wrapper">
             <div class="node engineer-group">
                 <i class="fa fa-lightbulb department-icon"></i>
                 <div class="name">第四事業部</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">部長</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">マネージャー: 4名</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">エンジニア</div>
+                <div class="details">部長</div>
+                        <div class="details">マネージャー: 4名<br>エンジニア</div>
             </div>
         </div>
         <div class="node-wrapper">
             <div class="node engineer-group">
                 <i class="fa fa-chart-bar department-icon"></i>
                 <div class="name">第五事業部</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">部長</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">マネージャー: 2</div>
-                <div class="node engineer-group" data-aos="fade-up"data-aos-delay="350">エンジニア</div>
+                <div class="details">部長</div>
+                        <div class="details">マネージャー: 2名<br>エンジニア</div>
             </div>
         </div>
     </div>
